styles.css
*{
    margin: 0;
    padding: 0;
    font-family: 'Playfair', sans-serif;
    box-sizing: border-box;
}

html{
    font-size: 60%;
    overflow-x: hidden;
}

body{
    background: #080808;
    color: #fff;
}


.header{
    width: 100%;
    padding: 10px 10%;
}

.navbar{
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-wrap: wrap;
}

.navbar .logo{
    font-size: 30px;
    font-weight: 700;
    text-decoration: none;
    color: white
}

.logo span{
    text-shadow: 0 0 25px #FDBD01;
}

ul {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
}

ul li{
    margin: 10px 20px;
}

ul li a{
    color: #fff;
    text-decoration: none;
    font-size: 22px;
    position: relative;
}

ul li a::after{
    content: '';
    width: 0;
    height: 3px;
    background: #FFFAA0;
    position: absolute;
    left: 0;
    bottom: -6px;
    transition: 0.5s;
}

ul li a:hover:after{
    width: 100%
}

section{
    min-height: 100vh;
    padding: 160px 12% 160px;
}

span{
    color:#FEFEC1
}

.button{
    display: inline-block;
    padding: 12px 24px;
    background-color: #FEFEC1;
    box-shadow: 0 0 25px #FEFEC1;
    border-radius: 8px;
    font-size: 16px;
    color: #080808;
    text-decoration: none;
    text-align: center;
    border: 2px solid transparent;
    letter-spacing: 1.6px;
    font-weight: 600;
    width: auto;
    cursor: pointer;
    transition: 0.3s ease-in-out;
}

.button:hover{
    box-shadow: 0 0 50px #FEFEC1;
    transform: scale(1.05);
}

.home{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 80px;
}

.home h1{
    font-size: 56px;
    font-weight: 700;
    line-height: 1;
    margin-top: 24px;
}

.home-content{
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    justify-content: center;
    width: 60%;
}

.home-content h3{
    font-size: 32px;
    margin-top: 16px;
    margin-bottom: 32px;
}

.home-content p{
    font-size: 20px;
    font-weight: 500;
    line-height: 1.5;
    max-width: 1000px;
}

.home-img img{
    position: relative;
    width: 32vw;
    height: 32vw;
    object-fit: cover;
    object-position: right center;
    border-radius: 50%;
    box-shadow: 0 0 25px #FEFEC1;
    cursor: pointer;
    transition: 0.4s ease-in-out;
}

.home-img img:hover{
    box-shadow: 0 0 25px #FEFEC1,
                0 0 50px #FEFEC1,
                0 0 100px #FEFEC1;
}

.home .button{
    margin: 32px;
}

.about{
    display:flex;
    justify-content: center;
    align-items: center;
    gap: 160px;
}

.about-img{
    border-radius: 50%;
}

.about-img img{
    position: relative;
    width: 32vw;
    border-radius: 50%;
    box-shadow: 0 0 25px #FEFEC1;
    top: 16px;
    cursor: pointer;
    transition: 0.4s ease-in-out;
}

.about-img img:hover{
    box-shadow: 0 0 25px #FEFEC1,
                0 0 50px #FEFEC1,
                0 0 100px #FEFEC1;
}

.heading{
    text-align: center;
    font-size: 96px;
    margin: 80px 0;
}

.about .heading{
    margin: 0;
}

.about-content h2{
    text-align: left;
    line-height: 1.5;
}

.about-content h3{
    font-size: 42px;
}

.about-content p{
    font-size: 20px;
    margin: 32px 0 48px;
}

.project-box{
    display: flex;
    justify-content: center;
    gap: 40px;
    flex-wrap: wrap;
}

.project-block{
    flex: 1 1 30%;
    max-width: 30%;
    background-color: rgba(0, 0, 0, 0.3);
    padding: 30px;
    gap: 10px;
    border: 2px solid #FEFEC1; 
    border-radius: 30px;
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    justify-content: center;
    overflow: hidden;
    cursor: pointer;
    box-shadow: 0 0 15px #FEFEC1;
    transition: 0.4s ease;
}

.project-block:hover{
    transform: translateY(-10px);
}

.project-block .button{
    margin-top: 16px;
} 

.project-block img{
    width: 100%;
    height: auto;
    border-radius: 8px;
    object-fit: cover;
}

.project-card h3{
    font-size: 48px;
}

.project-card p{
    font-size: 26px;
}

.contact{
    background-color: #080808;
    padding: 80px 10%;
}

.contact h2{
    margin-bottom: 32px;
    color: white;
    font-size: 44px;
    text-align: center;
}

.contact form{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 32px;
    margin: 0px auto;
    text-align: left;
    max-width: 800px;
}
.contact form .input-box{
    width: 100%;
}

.contact form .input-box input, .contact form textarea{
    width: 100%;
    padding: 16px;
    font-size: 20px;
    color: #fff;
    background-color: #080808;
    border-radius: 14px;
    border: 2px solid #FEFEC1;
    margin-bottom: 24px;
    resize: none;
}

.contact form label{
    font-size: 24;
    margin-bottom: 8px;
}

.contact form .button{
    margin-top: 10px;
    width: 100%;
} 

